Freestyle inconsistent line drawing with large geometry dimension #49479

Closed
opened 2016-09-28 15:46:14 +02:00 by M L · 6 comments

System Information
Ubuntu 14, Ubuntu 16, MacOS 10.11.6 with different graphic cards

Blender Version
Broken: 2.77 and 2.78 RC 2
Worked: not tested

Short description of error
Freestyle omits and breaks lines for geometries with dimensions larger than ~100 blender units.

Exact steps for others to reproduce the error
.blend file attached - scale the geometry so that it's dimension exceeds ~100 blender units, freestyle lines may be missing. When the geometry is scaled larger than ~100 blender units, some visible lines are not drawn or are interrupted. The effect does not always occur at the same point in the geometry, as far as I could determine, there is no rule while lines are omitted/broken.

The point were the visible lines are interrupted always corresponds to where a hidden line crosses it as seen from the camera (shown for emphasis in blue in the blend file, bug exists whether hidden lines are drawn or not). Multiple crossings with hidden lines cause a succession of drawing/not-drawing (not shown in the attached file).

To see the effect scale the geometry in the attached blend file to somewhere between 110 and 170 units then render. You may have to try different scales.

When the dimension of the geometry is below 100 blender units, freestyle lines are always drawn as expected.

The problem occurs in architecture and landscape renders where it can be important to use exact dimensions (e.g. georeferenced blend files with large structures).

Attached a simple blend file and some sample renders only differing in the dimension of the geometry (camera was not moved). While the geometry is joined in the attached blend file (to make the scaling easier) the effect also occurs with multiple independent objects.

freestyle_bug_04.png

freestyle_bug_02.png

freestyle_bug_03.png

freestyle_bug_03_hidden.png

freestyle_bug.blend

**System Information** Ubuntu 14, Ubuntu 16, MacOS 10.11.6 with different graphic cards **Blender Version** Broken: 2.77 and 2.78 RC 2 Worked: not tested **Short description of error** Freestyle omits and breaks lines for geometries with dimensions larger than ~100 blender units. **Exact steps for others to reproduce the error** .blend file attached - scale the geometry so that it's dimension exceeds ~100 blender units, freestyle lines _may_ be missing. When the geometry is scaled larger than ~100 blender units, some visible lines are not drawn or are interrupted. The effect does not always occur at the same point in the geometry, as far as I could determine, there is no rule while lines are omitted/broken. The point were the visible lines are interrupted always corresponds to where a hidden line crosses it as seen from the camera (shown for emphasis in blue in the blend file, bug exists whether hidden lines are drawn or not). Multiple crossings with hidden lines cause a succession of drawing/not-drawing (not shown in the attached file). To see the effect scale the geometry in the attached blend file to somewhere between 110 and 170 units then render. You may have to try different scales. When the dimension of the geometry is below 100 blender units, freestyle lines are always drawn as expected. The problem occurs in architecture and landscape renders where it can be important to use exact dimensions (e.g. georeferenced blend files with large structures). Attached a simple blend file and some sample renders only differing in the dimension of the geometry (camera was not moved). While the geometry is joined in the attached blend file (to make the scaling easier) the effect also occurs with multiple independent objects. ![freestyle_bug_04.png](https://archive.blender.org/developer/F370041/freestyle_bug_04.png) ![freestyle_bug_02.png](https://archive.blender.org/developer/F370042/freestyle_bug_02.png) ![freestyle_bug_03.png](https://archive.blender.org/developer/F370043/freestyle_bug_03.png) ![freestyle_bug_03_hidden.png](https://archive.blender.org/developer/F370044/freestyle_bug_03_hidden.png) [freestyle_bug.blend](https://archive.blender.org/developer/F370034/freestyle_bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @mluisser

Added subscriber: @mluisser
Tamito Kajiyama was assigned by Bastien Montagne 2016-09-30 10:47:37 +02:00

Added subscriber: @AnthonyEdlin

Added subscriber: @AnthonyEdlin

I confirmed this is a regression from the 2.76 release. I will look into the issue.

I confirmed this is a regression from the 2.76 release. I will look into the issue.

This issue was referenced by 7f262acb92

This issue was referenced by 7f262acb92e5873f3c6fd63520bcec60f8e220dc

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49479
No description provided.