Fix T49479: Freestyle inconsistent line drawing with large geometry dimension.

Ray-plane intersection routine GeomUtils::intersectRayPlane() was used with an
unnormalized direction vector as input.